# Study_Learning-Neural-Networks

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/Notebooks/: 0_test.ipynb  micrograd_lecture_second_half_roughly.ipynb
src/micrograd/: engine.py  nn.py  visuals.py
